--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
     <!--   자동으로 그림 왼쪽에서 오른쪽 이동  -->
     <div class="container">
         <div class="main main-self"><img src="./images/main.jpg" width="100%" height="100%">
-            <b class="main-text"> Hong Gil Dong</b>
+            <b class="main-text"> Hong li li</b>
         </div>
-        <div class="main2 main2-self">  
+        <div class="main2 main2-self">
             <ul>
                 <li><a href="./main.html" style="text-decoration-line: none;">Home</a></li>
                 <li> <a href="./post.html" style="text-decoration-line: none;">Post</a></li>
